memoji overlap fix

--- a/src/style.css
+++ b/src/style.css
@@ -923,7 +923,7 @@ form input[type="submit"] {
   /* tablet */
 
   .memoji-box {
-   padding-top: 50px;
+   padding-top: 80px;
   }
 
   .services-container {
